--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>oauth2-JWT</module>
         <module>oauth2-sso</module>
         <module>oauth2-sso-client</module>
+        <module>oauth2-form</module>
     </modules>
 
     <properties>
