oauth2-GJN模块简单骨架

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>oauth2-sso</module>
         <module>oauth2-sso-client</module>
         <module>oauth2-form</module>
+        <module>oauth2-GJN</module>
     </modules>
 
     <properties>
