--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>oauth2-sso-client</module>
         <module>oauth2-form</module>
         <module>oauth2-GJN</module>
+        <module>satokenDemo</module>
     </modules>
 
     <properties>
