--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>oauth2-form</module>
         <module>oauth2-GJN</module>
         <module>satokenDemo</module>
+        <module>springsecurity-login</module>
     </modules>
 
     <properties>
